--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,27 +1,27 @@
-.form{
-    
-    border: none;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    padding-left: 10px;
-    padding-right: 10px;    
+.form {
+  border: 1px solid black;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
 }
 
-.field{
-  
-    border: 2px solid gray;
-    border-radius: 4px;
+.field {
+  border: 2px solid gray;
+  border-radius: 4px;
+  height: 20px;
 }
 
 label {
-    margin: 0;
-    margin-top: 20px;
+  margin: 0;
+  margin-top: 20px;
 }
-.btn{
-    display: flex;
-    width: 100px;
-    margin-top: 20px;
-    align-items: center;
-    justify-content: center;
+.btn {
+  margin: 0 auto;
+  width: 100px;
+  margin-top: 20px;
+  align-self: center;
+  
 }
